# advandeb

./: .gitignore  AdvanDEB-Infrastruktura-Asistiranog-Modeliranja.md  CLAUDE.md  RUNNING.md
app/: .gitignore  CLAUDE.md  DEPLOYMENT.md  (+9 more)
knowledge-builder/: AGENTS-README.md  CLAUDE.md  IMPLEMENTATION-SUMMARY.md  INGESTION-SETUP.md  Makefile  README.md  environment.yml  pyproject.toml  test_agent_server.py  test_agents_basic.py  test_embedding_pipeline.py  test_kg_builder.py
knowledge-builder/advandeb_kb/: __init__.py
knowledge-builder/advandeb_kb.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
knowledge-builder/advandeb_kb/agents/: __init__.py  base_agent.py  curator_agent.py  graph_explorer_agent.py  query_planner_agent.py  retrieval_agent.py  synthesis_agent.py
knowledge-builder/advandeb_kb/config/: settings.py
knowledge-builder/advandeb_kb/database/: arango_client.py  ensure_indexes.py  mongodb.py
knowledge-builder/advandeb_kb/mcp/: __init__.py  protocol.py
knowledge-builder/advandeb_kb/models/: __init__.py  agent_models.py  common.py  graph.py  ingestion.py  knowledge.py  provenance.py  taxonomy.py
knowledge-builder/advandeb_kb/services/: agent_framework.py  agent_service.py  agent_tools.py  cache_service.py  chromadb_service.py  chunking_service.py  data_processing_service.py  embedding_service.py  graph_builder_service.py  graph_expansion_service.py  graph_rebuild_queue.py  hybrid_retrieval_service.py  ingestion_service.py  kg_builder_service.py  kg_linker_agent_service.py  knowledge_service.py  local_model_provider.py  taxonomy_service.py  visualization_service.py
knowledge-builder/dev-server/: .env.example  celery_app.py  main.py  requirements.txt
knowledge-builder/dev-server/frontend/: index.html  package-lock.json  package.json  vite.config.js
knowledge-builder/dev-server/routers/: agents.py  data_processing.py  database.py  filesystem.py  ingestion.py  kg_builder.py  knowledge.py  visualization.py
knowledge-builder/dev-server/tasks/: embedding_tasks.py  ingestion_tasks.py  kg_tasks.py  pipeline.py
knowledge-builder/scripts/: batch_ingest.py  build_graphs.py  enrich_document_metadata.py  import_openalex_abstracts.py  import_taxonomy.py  ingest_test_arango.py  link_documents_to_taxa.py  migrate_mongo_to_arango.py  re_embed_documents.py  re_extract_facts.py  run_sf_matching.py  seed_stylized_facts.py  start_agents.py
knowledge-builder/tests/: test_agent_pipeline.py  test_ingestion.py  test_models.py  test_sf_seed.py  test_taxonomy.py
mcp/: .gitignore  CLAUDE.md  CONFIGURATION.md  Cargo.toml  DEPLOYMENT.md  README.md  TROUBLESHOOTING.md
mcp/benches/: README.md  gateway_benchmarks.rs
mcp/certs/: .gitignore  README.md
mcp/config/: default.toml  local.toml.example  test_tls.toml
mcp/examples/: README.md  client.py  mock_agent.py  test_api.sh
mcp/src/: config.rs  lib.rs  main.rs  metrics.rs  ollama.rs
mcp/src/gateway/: balancer.rs  circuit_breaker.rs  mod.rs  pool.rs  registry.rs  retry.rs  router.rs
mcp/src/mcp/: protocol.rs  server.rs
mcp/src/workflow/: context.rs  executor.rs
mcp/tests/: config.rs  health.rs  integration.rs  test_health.py
(+146 files in other folders)
