[package]
name = "advandeb-mcp"
version = "0.1.0"
edition = "2021"
description = "Model Context Protocol server for the AdvanDEB platform (Rust)"
authors = ["AdvanDEB"]
license = "MIT"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["macros", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "1.0"
envy = "0.4"

[dev-dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
http-body-util = "0.1"
tower = "0.4"
