[package]
name = "advandeb-mcp"
version = "0.1.0"
edition = "2021"
description = "Model Context Protocol server for the AdvanDEB platform (Rust)"
authors = ["AdvanDEB"]
license = "MIT"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["macros", "json", "ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.24", features = ["connect"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
prometheus = { version = "0.13", features = ["process"] }
once_cell = "1.21"
thiserror = "1.0"
envy = "0.4"
axum-server = { version = "0.7", features = ["tls-rustls"] }
config = "0.14"
toml = "0.8"

[dev-dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
http-body-util = "0.1"
tower = { version = "0.4", features = ["util"] }
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "gateway_benchmarks"
harness = false
